5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1752_3093.log
== TEST (2019-05-16 17:26:13) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= gual a o tio akila
	
-- ERROR:
File "XXXX", line 15
    vitoras= gual a o tio akila
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:26:15) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= gual a o tio akila
	
-- EXECUTION TIME:
0.144098
-- ERROR:
  File "/home/codebench/codes/1752/3093/main.py", line 15
    vitoras= gual a o tio akila
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:15) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= gual a o tio akila
	
-- ERROR:
File "XXXX", line 15
    vitoras= gual a o tio akila
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:17) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= 
	empataes=
	derrota sáo paea inv
	
-- ERROR:
File "XXXX", line 15
    vitoras= 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:19) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= 
	empataes=
	derrota sáo paea inv
	
-- ERROR:
File "XXXX", line 15
    vitoras= 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:54) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= 
	empataes=
	derrotas= 
-- ERROR:
File "XXXX", line 15
    vitoras= 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:31:19) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= 15
	empataes=6
	derrotas= 8
-- EXECUTION TIME:
0.317189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3093/main.py", line 4, in <module>
    while(v > e > d):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:20) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= 15
	empataes=6
	derrotas= 8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(v > e > d):
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:31:26) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:
	vitoras= 15
	empataes=6
	derrotas= 8
-- EXECUTION TIME:
0.166949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/3093/main.py", line 4, in <module>
    while(v > e > d):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:31) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14

else:

-- ERROR:
File "XXXX", line 15
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:12) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14
	
else:
print("")
-- ERROR:
File "XXXX", line 15
    print("")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:56) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	Vitoras=25
	Empates= 8
	Derrotas= 5
	
if(v > e < d):
	vitoras= 25
	empates= 11
	derrotas= 14
	
else:
print("46")
-- ERROR:
File "XXXX", line 15
    print("46")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:13) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	V = 25
	E = 8
	D = 5
if(v > e < d):
	V = 11
	E = 8
	D = 14
	
else:
print("V",",""E",",""D")
-- ERROR:
File "XXXX", line 14
    print("V",",""E",",""D")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:37) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	V = 25
	E = 8
	D = 5
if(v > e < d):
	V = 11
	E = 8
	D = 14
	
else:
print("V,E,D")
-- ERROR:
File "XXXX", line 14
    print("V,E,D")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:44) 
-- CODE:
V= 25
E= 8
D= 5
while(v > e > d):
	V = 25
	E = 8
	D = 5
if(v > e < d):
	V = 11
	E = 8
	D = 14
	
else:
print("")
-- ERROR:
File "XXXX", line 14
    print("")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:29) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print(V= 25, E= 8, D= 5)
	
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print(V= 11, E= 8, D= 14)
	
else:
print(20, 6, 4)
-- ERROR:
File "XXXX", line 17
    print(20, 6, 4)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:52:32) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print(V= 25, E= 8, D= 5)
	
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print(V= 11, E= 8, D= 14)
	
else:
print(20, 6, 4)
-- EXECUTION TIME:
0.152954
-- ERROR:
  File "/home/codebench/codes/1752/3093/main.py", line 17
    print(20, 6, 4)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:09) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)
-- ERROR:
File "XXXX", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:42) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)
-- ERROR:
File "XXXX", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:56:44) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)
-- EXECUTION TIME:
0.143606
-- ERROR:
  File "/home/codebench/codes/1752/3093/main.py", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:56:45) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)
-- EXECUTION TIME:
0.132038
-- ERROR:
  File "/home/codebench/codes/1752/3093/main.py", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:56:45) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)
-- EXECUTION TIME:
0.129066
-- ERROR:
  File "/home/codebench/codes/1752/3093/main.py", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:56:46) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)
-- EXECUTION TIME:
0.176452
-- ERROR:
  File "/home/codebench/codes/1752/3093/main.py", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:48) 
-- CODE:
V= 20
E= 6
D= 4
while(v > e > d):
	V = 25
	E = 8
	D = 5
	print()
if(v > e < d):
	V = 11
	E = 8
	D = 14
	print()
else:
print(20, 6, 4)

-- ERROR:
File "XXXX", line 15
    print(20, 6, 4)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
